cilium-complementary-features/resources/ipv4_nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ipv4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ipv4
  template:
    metadata:
      labels:
        app: nginx-ipv4
    spec:
      containers:
      - name: nginx-ipv4
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: html-message
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-ipv4
spec:
  type: LoadBalancer
  selector:
    app: nginx-ipv4
  ports:
    - port: 80
      targetPort: 80
